crates/aven-check/tests/fixtures/check/valid/field-access-row-polymorphism.av
getX = (p) => p.x
number : Int = getX({ x: 1, y: 2 })
text : Text = getX({ x: "ok", name: "Ada" })
