crates/aven-check/tests/fixtures/check/invalid/tuple-mismatch.av
pair : (Int, Text) = (1, 2)
